--- a/hien_thi_dau_bai1.html
+++ b/hien_thi_dau_bai1.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<button type="button" onclick="showMessage();">Click Me!</button>
+    <script>
+        function showMessage(){
+        alert('Xin chào!');
+        }
+    </script>
 </body>
 </html>
